force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Contact/fields/ExternalID_Con__c.field-meta.xml
<CustomField>
    <fullName>ExternalID_Con__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID_Con</label>
    <length>255</length>
    <type>Text</type>
</CustomField>