force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Contact/fields/FD_Version__c.field-meta.xml
<CustomField>
    <fullName>FD_Version__c</fullName>
    <description>test</description>
    <label>FD_Version</label>
    <type>AutoNumber</type>
</CustomField>