force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Contact/fields/sample_ext_id_contact__c.field-meta.xml
<CustomField>
    <fullName>sample_ext_id_contact__c</fullName>
    <externalId>true</externalId>
    <label>sample ext id contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>